# RustAndroidSample

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/vitantonio/nagauzzi/rustandroidsample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/vitantonio/nagauzzi/rustandroidsample/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/rust/hello/: Cargo.toml
app/src/main/rust/hello/src/: generator.rs  lib.rs
app/src/test/java/com/vitantonio/nagauzzi/rustandroidsample/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
