[package]
name = "hello"
version = "0.1.0"
authors = ["tonionagauzzi <vitantonionagauzzi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
array-macro = "2.1.0"
jni = "0.19.0"
chrono = "0.4.19"
rand = "0.8.3"
